# Measurer

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
docs/adr/: 0001-use-asymmetric-space-measurement-rules.md  0002-use-rosettasciio-for-dm3-input.md  0003-use-simple-mvs-state-and-export-rules.md
scripts/: generate_ab_group_test_images.py
src/measurer/: __init__.py  app.py  app_icon.py  box_plot.py  debug_render.py  export.py  image_display.py  image_input.py  image_queue.py  measurement.py  measurement_report.py  probability_plot.py  result_render.py  roi.py  synthetic.py  trace_sheet.py
tests/: conftest.py  test_app_icon.py  test_app_shell.py  test_documentation.py  test_export.py  test_image_display.py  test_image_input.py  test_image_queue.py  test_measurement.py  test_measurement_report.py  test_probability_plot.py  test_trace_sheet.py
