[project]
name = "measurer"
version = "0.1.0"
description = "Desktop GUI tool for measuring MOM structures in STEM ZC images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pyside6>=6.8",
    "tifffile>=2025.5.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
measurer = "measurer.app:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
