[project]
name = "measurer"
version = "0.1.0"
description = "Desktop GUI tool for measuring MOM structures in STEM ZC images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "openpyxl>=3.1.5",
    "pyside6>=6.8",
    "rosettasciio>=0.13.0",
    "tifffile>=2025.5.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
measurer = "measurer.app:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
